--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <!-- <link rel="icon" href="/favicon.ico"> -->
-    <link rel="icon" href="src/assets/TraubCo_logo_small.png">
+    <link rel="icon" href="src/assets/testSmallTabLogo.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TraubCo Inc</title>
   </head>
